--- a/index.html
+++ b/index.html
@@ -4,11 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
     <script defer src="./js/main.js"></script>
     <title>Carousel Mono Array</title>
 </head>
     <body>
-        
+        <div class="container">
+            <div class="slider">
+                <div class="slide active">
+                    <img src="./img/01.webp" alt="First image">
+                </div>
+                <div class="slide">
+                    <img src="./img/02.webp" alt="Second image">
+                </div>
+                <div class="slide">
+                    <img src="./img/03.webp" alt="Third image">
+                </div>
+                <div class="slide">
+                    <img src="./img/04.webp" alt="Fourth image">
+                </div>
+                <div class="slide">
+                    <img src="./img/05.webp" alt="Fifth image">
+                </div>
+            </div>
+
+            <div class="icons">
+                <button class="next">
+                    <i class="fa-light fa-chevron-right"></i>
+                </button>
+
+                <button class="previous">
+                    <i class="fa-light fa-chevron-left"></i>
+                </button>
+            </div>
+        </div>
     </body>
 </html>
