[DOCS] Proseguimento con l'interattività della pagina

--- a/index.html
+++ b/index.html
@@ -30,13 +30,8 @@
             </div>
 
             <div class="icons">
-                <button class="next">
-                    <i class="fa-light fa-chevron-right"></i>
-                </button>
-
-                <button class="previous">
-                    <i class="fa-light fa-chevron-left"></i>
-                </button>
+                <button class="next">Next</button>
+                <button class="previous">Previous</button>
             </div>
         </div>
     </body>
