--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <script defer src="./js/main.js"></script>
     <title>Carousel Mono Array</title>
 </head>
     <body>
         <div class="container">
+            <h1>A Carousel Images</h1>
             <div class="slider">
                 <div class="slide active">
                     <img src="./img/01.webp" alt="First image">
@@ -28,11 +29,15 @@
                     <img src="./img/05.webp" alt="Fifth image">
                 </div>
             </div>
-
-            <div class="icons">
-                <button class="next">Next</button>
-                <button class="previous">Previous</button>
-            </div>
         </div>
+
+        <button class="carousel-control-prev prev" type="button">
+            <span class="carousel-control-prev-icon"></span>
+        </button>
+
+        <button class="carousel-control-next next" type="button">
+            <span class="carousel-control-next-icon"></span>
+        </button>
+
     </body>
 </html>
